2005-03-17 Gerard Klaver <gerard at gkall dot hobby dot nl>

	* doc/descriptions-external/samsung.desc added
	  
2005-03-16  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* doc/descriptions/unsupported.desc: Removed Microtek ScanMaker
	  4800 (supported by sm3840 now).

2005-03-16  Earle F. Philhower III <earle@ziplabel.com>
	* backend/sm3840.c backend/sm3840_scan.c backend/sm3840.conf
	  backend/Makefile.in doc/descriptions/sm3840.desc
	  doc/sane-sm3840.man: Added ScanMaker 4800 USB ID and
	  documentation, fixed PPC endianness problems, fixed
	  Makefile dependencies for sm3840 driver

2005-03-13  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* doc/descriptions/unsupported.desc
	  doc/descriptions-external/genesys.desc: Added and updated
	  various scanners. 

2005-03-04  Gerard Klaver <gerard at gkall dot hobby dot nl>

        * doc/sane-teco2.man: text update
	  backends/teco2: use of __unused__
				      
2005-03-03  Julien Blache <jb@jblache.org>
	* tools/hotplug-ng/libsane.hotplug: add missing quote in the grep line.

2005-03-02  Julien Blache <jb@jblache.org>
	* tools/hotplug-ng/libsane.hotplug: allow for several spaces
	between fields in the db file.

2005-02-28  Julien Blache <jb@jblache.org>
	* tools/hotplug-ng/libsane.hotplug: replace \t by [[:space:]] when
	grepping for the device in the db file.

2005-02-21  Julien Blache <jb@jblache.org>
	* tools/hotplug-ng: added new hotplug/hotplug-ng hook, with
	scripts and documentation.

2005-02-20  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* doc/descriptions/unsupported.desc: Removed Genius
	  ColorPage-Vivid Pro II, now in external backend. Added Visioneer
	  9000.
	* AUTHORS configure configure.in backend/Makefile.in
	  backend/dll.conf backend/sm3840.c backend/sm3840.conf
	  backend/sm3840.h backend/sm3840_lib.c backend/sm3840_lib.h
	  backend/sm3840_params.h backend/sm3840_scan.c doc/Makefile.in
	  doc/sane-sm3840.man doc/sane.man doc/descriptions/sm3840.desc: