@@ -1,3 +1,6 @@
+2005-03-20 Earle F. Philhower III <earle@ziplabel.com>
+	* backend/sm3840_scan.c: Big-endian graymode fix
+
 2005-03-17 Gerard Klaver <gerard at gkall dot hobby dot nl>
 
 	* doc/descriptions-external/samsung.desc added
